ghost/base/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - name: ghost
        image: ghost:3.6.0-alpine
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 2368
            protocol: TCP
