ghost/base/traefik-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ghost
  namespace: default
  annotations: {}
  labels:
    app: ghost
    version: v3.6.0
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ghost.123456789012.sandbox.fogops.io`)
    kind: Rule
    services:
    - name: ghost
      kind: TraefikService
